Index is changing for main page show for the container

--- a/Test-git_Repository_project/Pages/Index.cshtml
+++ b/Test-git_Repository_project/Pages/Index.cshtml
@@ -6,5 +6,8 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome Anil</h1>
+    <h2>
+        Good Working this github test into the modify sachin
+    </h2>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
